--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,8 @@
   "author": "Shmuel Robinov",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "firebase": "^9.10.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.14",
