flights maker works

--- a/flightsMaker/package.json
+++ b/flightsMaker/package.json
@@ -2,11 +2,11 @@
   "name": "flights-maker",
   "version": "1.0.0",
   "description": "simulator that makes the flights",
-  "main": "./dest/index.js",
+  "main": "./dst/index.js",
   "scripts": {
     "dev": "nodemon ./src/index.ts",
     "build": "tsc",
-    "start": "node ./dest/index.js",
+    "start": "node ./dist/index.js",
     "all-in-one": "npm i && npm run build && npm start"
   },
   "author": "Shmuel Robinov",
