--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "author": "Shmuel Robinov",
   "license": "MIT",
   "dependencies": {
+    "dotenv": "^16.0.3",
     "firebase": "^9.10.0",
     "socket.io": "^4.5.2",
     "socket.io-client": "^4.5.2"
