--- a/server/src/dataBase/firebase.json
+++ b/server/src/dataBase/firebase.json
@@ -1,5 +1,9 @@
 {
   "database": {
     "rules": "database.rules.json"
+  },
+  "authProps": {
+    "mail": "shmulik4rob@gmail.com",
+    "password": "shmuel1234"
   }
 }
